--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,32 @@
-﻿<Window x:Class="PingPong.MainWindow"
+﻿<Window x:Class="PingPong.MainWindow" Background="Aquamarine"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PingPong"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" FontFamily="Arial" FontSize="20">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="5*" />
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+        </Grid>
+        <Label FontSize="25" FontWeight="Bold" FontFamily="Arial" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Margin="6 2 6 0" VerticalAlignment="Top"  Background="CadetBlue" BorderBrush="DarkSlateGray" BorderThickness="3">Asztalitenisz ranglista</Label>
+        <Border Grid.Column="0" Grid.Row="1" Grid.RowSpan="4" Background="CadetBlue" BorderBrush="DarkSlateGray" BorderThickness="3" Margin="5 50 0 5">
+            <Label  Content="Játékosok" FontSize="24" Grid.Row="3" FontWeight="Bold" HorizontalAlignment="Center"/>
+        </Border>
+        <Border Grid.Column="1" Grid.Row="0" BorderBrush="DarkSlateGray" BorderThickness="3" Margin="5 50 5 5" >
 
+        </Border>
     </Grid>
+
 </Window>
