--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -75,7 +75,42 @@
 
                     </StackPanel>
                 </Grid>
-                <Grid x:Name="gridPlan" Visibility="Visible" Grid.Row="1" HorizontalAlignment="Center">
+                <Grid x:Name="gridDelete" Visibility="Hidden" Grid.Row="1" HorizontalAlignment="Center">
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <StackPanel Orientation="Vertical">
+                        <Label Content="Válassz ki egy játékost" Width="250" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
+                        <ComboBox x:Name="tbDelete" Width="200" Height="35"/>
+                        <Button x:Name="btnSubmitDelete" Content="Törlés" Width="150" Margin="0 10 0 0" HorizontalAlignment="Center" Background="LightBlue" BorderBrush="DarkSlateGray" BorderThickness="2"/>
+                    </StackPanel>
+                </Grid>
+                <Grid x:Name="gridEdit" Visibility="Hidden" Grid.Row="1" HorizontalAlignment="Center">
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Row="0" Margin="10 10 10 10">
+                        <StackPanel Orientation="Horizontal" Margin="0 5 0 5">
+                            <Label Content="Név:" Width="100" VerticalAlignment="Center"/>
+                            <ComboBox x:Name="tbNameEdit" Width="200"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0 5 0 5">
+                            <Label Content="Rank:" Width="100" VerticalAlignment="Center"/>
+                            <TextBox x:Name="tbRankEdit" Width="200"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0 5 0 5" >
+                            <Label Content="Értékelés:" Width="100" VerticalAlignment="Center"/>
+                            <TextBox x:Name="tbSkillEdit" Width="200"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0 5 0 5" >
+                            <Label Content="Leírás:" Width="100" VerticalAlignment="Center"/>
+                            <TextBox x:Name="tbDescEdit" Width="200"/>
+                        </StackPanel>
+
+                        <Button x:Name="btnSubmitEdit" Content="Szerkesztés" Width="150" Margin="0 10 0 0" HorizontalAlignment="Center" Background="LightBlue" BorderBrush="DarkSlateGray" BorderThickness="2"/>
+                    </StackPanel>
+                </Grid>
+                <Grid x:Name="gridPlan" Visibility="Hidden" Grid.Row="1" HorizontalAlignment="Center">
                     <Grid.RowDefinitions>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
